--- a/css/custom.css
+++ b/css/custom.css
@@ -372,3 +372,10 @@ body {
     width: 100% !important;
   }
 
+  .text-align-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
